<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fisal.madinaguide.EventFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/events_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/mawlid_event_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/event1_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/events_title_1"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/mawlid_event_details"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event1_details"
            android:layout_centerHorizontal="true"
            android:text="@string/for_more_info_click_the_below_link"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/mawlid_event_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/more_info"
            android:layout_centerHorizontal="true"
            android:text="@string/mawlid_event_url" />

    </RelativeLayout>

</FrameLayout>
