<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fisal.madinaguide.HotelFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/hotel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/hotel_title"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/hotel_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/hotel_title"
            android:layout_centerHorizontal="true"
            android:src="@drawable/madinahotel" />

        <TextView
            android:id="@+id/hotel_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotel_image"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/hotel_details"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/hotel_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotel_details"
            android:layout_centerHorizontal="true"
            android:text="@string/hotel_url" />

    </RelativeLayout>


</FrameLayout>
